<resources>
    <string name="app_name">Broach</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="h_shake" />
    <string name="design_rec" />
    <string name="design_rec2" />
    <string name="design_rec3" />
    <string name="Splash_text">A problem shared is a problem solved</string>
    <string name="welcome_to_a_safe_haven">Welcome to a safe Haven</string>
    <string name="dot" />
    <string name="next">Next</string>
    <string name="logo_dsc" />
    <string name="update_password">Update Password</string>
    <string name="account_verified">Account verified!</string>
    <string name="enter_password">Enter new password</string>
    <string name="re_enter_password">Re-enter new password</string>
    <string name="save_amp_login"><![CDATA[Save & Login]]></string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_email_address2">Enter the email address associated with your account</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="request_reset_link">Request Reset Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="lightbulb" />
    <string name="where_your_though">where your thoughts and</string>
    <string name="problems_can_be">problems can be expressed</string>
    <string name="and_solved">and solved.</string>
    <string name="one_stop_shop">Your one-stop shop</string>
    <string name="back">Back</string>
    <string name="heart" />
    <string name="relax_and_share">Relax and share</string>
    <string name="be_open_and_rest_assured">Be open and rest assured that</string>
    <string name="broach_is_here_to_help">Broach is here to help.</string>
    <string name="cn_ti_nue">Continue</string>
    <string name="todo">TODO</string>
    <string name="who_are_you_n_help_us_to_know_you_better">Who are you?\n Help us to know you better</string>
    <string name="reporter_requester">Reporter/requester</string>
    <string name="what_best_describes_you">What best describes you?</string>
    <string name="see_more">see more</string>
    <string name="support_organization">Support Organization</string>
    <string name="continue_button">continue</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="cases">Cases</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="hello_franklin_onyedika">User Name!</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="report_a_case">Report a Case</string>
    <string name="request_a_service">Request a Service</string>
    <string name="case_history">Case History</string>
    <string name="view_all">View All</string>
    <string name="service_history">Service History</string>
    <string name="hi_charity_heart_foundation">Organisation User Name!</string>
    <string name="received_cases">Received Cases</string>
    <string name="offered_services">Offered Services</string>
    <string name="my_profile">My Profile</string>
    <string name="settings_options_menu" />
    <string name="profile_cover_photo" />
    <string name="edit_profile">Edit Profile</string>
    <string name="_0">0</string>
    <string name="all_cases">All Cases</string>
    <string name="closed_cases">Closed Cases</string>
    <string name="pending_cases">Pending Cases</string>
    <string name="reports_services">Reports/Services</string>
    <string name="resolved">Resolved</string>
    <string name="pending">Pending</string>
    <string name="close_button" />
    <string name="view_cover_photo">View Cover Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="reposition_cover_photo">Reposition Cover Photo</string>
    <string name="remove_cover_photo">Remove Cover Photo</string>
    <string name="save">Save</string>
    <string name="organization_name1">Organization Name</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="organization_address">Organization Address</string>
    <string name="home_icon" />
    <string name="cases_icon" />
    <string name="notifications_icon" />
    <string name="profile_icon" />
    <string name="logging_in">Logging in...</string>
    <string name="organization_details">Tell us about your organization</string>
    <string name="knw_organization">Help us to know your organization better</string>
    <string name="sector_specialization">Sector Specialization</string>
    <string name="date_established">Date Established</string>
    <string name="organization_size">Organization Size</string>
    <string name="alternate_phone_contact">Alternate Phone Contact</string>
    <string name="image">image</string>
    <string name="last_stop_please_upload_your_logo_here">Last stop! please upload your logo here</string>
    <string name="upload_your_photo">upload your photo</string>
    <string name="continue_to_home">Continue to Home</string>
    <string name="occupation">Occupation</string>
    <string name="location">Address</string>
    <string name="user_name">User Name</string>
    <string name="hi_name">User name</string>
    <string name="person">person</string>
    <string name="what">What will you like to do today?</string>
    <string name="broach_news_amp_events"><![CDATA[Broach News &amp; Events]]></string>
    <string name="see_more1">See more</string>
    <string name="earn">Earn more report/request slots\non your broach subscription!</string>
    <string name="view_details">View details</string>
    <string name="news">news</string>
    <string name="back_to_photo_options">Back to Photo Options</string>
    <string name="lets_know_you">Let\'s know you!</string>
    <string name="we_d_love_to_know_who_s_coming">We\'d love to know who\'s coming\n in. please specify below.</string>
    <string name="spCategory">Specify Category</string>
    <string name="not_sure_which_you_are">Not sure which you are?</string>
    <string name="welcome">WELCOME!</string>
    <string name="login">Enter your details to Sign In</string>
    <string name="password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="action_sign_in">Sign In</string>
    <string name="DH_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your Account</string>
    <string name="hello_please_complete">Hello! Please complete the details\nbelow to open your account</string>
    <string name="organization_name">Full name of organization</string>
    <string name="phone_contact">Main phone contact</string>
    <string name="preferred_password">Preferred Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already have an account?</string>
    <string name="login2">Sign In</string>
    <string name="snap">Oh Snap! You want to leave!</string>
    <string name="sure_message">Are you sure you want to log out of\nthe Broach App?</string>
    <string name="sorry_error">Sorry! It was an error</string>
    <string name="log_me_out">Yes! Please log me out</string>
    <string name="logout_icon">logout_icon</string>
    <string name="log_out_complete">Log out complete!</string>
    <string name="you_ve_successfully_logged_out_of_your_account_sad_to_see_you_go">You\'ve successfully logged out of your account. Sad to see you go!</string>
    <string name="log_out">Log Out</string>
    <string name="_16_06_2024">16-06-2025</string>
    <string name="time">20:16</string>
    <string name="box">box</string>
    <string name="req_name">Requester name</string>
    <string name="req_ty">Request type</string>
    <string name="foundation">Foundation name</string>
    <string name="case_ty">Case type</string>
    <string name="personal_details">Personal Details</string>
    <string name="get_to_know">Let\'s get to know a few more things \nabout you...It\'ll only take a moment!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="let_s_put_a_face">Let\'s put a face to\nyour unique Broach\nAccount!\nUpload your Photo</string>
    <string name="profile_options">Profile Options</string>
    <string name="subscription">Subscription</string>
    <string name="my_wallet">My Wallet</string>
    <string name="support_feedback">Support/Feedback</string>
    <string name="faqs">FAQs</string>
    <string name="settings">Settings</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="full_name">Fullname</string>
    <string name="requester_name">Requester name</string>
    <string name="case_type">Case type</string>
    <string name="event_date">20-05-2025</string>
    <string name="date_">20-05-2025</string>
    <string name="req_name2">Requester name</string>
    <string name="req_serv">Service type</string>
    <string name="services">Foundation name</string>
    <string name="service_ty">Service type</string>
    <string name="notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="flow">Flow</string>
    <string name="sign_in">Sign in</string>
    <string name="reports_treated_0_0">Reports treated: 0/0</string>
    <string name="case_details">Case Details</string>
    <string name="who_is_reporting">Who is reporting?*</string>
    <string name="type_of_assault">Type of assault*</string>
    <string name="where">Where?</string>
    <string name="briefly_describe_what_happened">Briefly describe what happened</string>
    <string name="_0_200">0/200</string>
    <string name="compulsory_fields">*compulsory fields</string>
    <string name="victim_details">Victim Details</string>
    <string name="age_range">Age range*</string>
    <string name="employment_status">Employment Status</string>
    <string name="gender">Gender*</string>
    <string name="vulnerability_status">Vulnerability Status*</string>
    <string name="assailant_details">Assailant Details</string>
    <string name="no_of_people">No of people*</string>
    <string name="decla_ra_tion">I declare that all information provided by me is accurate and is not falsified in any way while making this report</string>
    <string name="report_case">Report Case</string>
    <string name="request_submit_ms">Your request has been sent and you will be getting a response soonest. Please keep checking your messages because you will be adequately notified when a response is ready</string>
    <string name="back_to_home">Back to Home</string>
    <string name="report_submit_ms">Your case has been reported to the necessary organizations you will be getting a response via your message tab. Please check regularly but you will be adequately notified.</string>
    <string name="case_reported">Case Reported!</string>
    <string name="check_box">I declare that all information provided by me is accurate and is not falsified in any way in requesting this service</string>
    <string name="submit_request">Submit Request</string>
    <string name="briefly">Briefly describe the nature of service you need</string>
    <string name="work_status">Work Status*</string>
    <string name="marital_status">Marital Status*</string>
    <string name="type_of_service">Type of Service*</string>
    <string name="email_address_re">Email Address*</string>
    <string name="self">Self</string>
    <string name="service_details">Service Details</string>
</resources>