<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/light_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_options"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close_button"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_subscription"
        style="@style/ProfileOptionItem"
        android:text="@string/subscription"
        app:drawableStartCompat="@drawable/ic_subscription" />

    <TextView
        android:id="@+id/tv_wallet"
        style="@style/ProfileOptionItem"
        android:text="@string/my_wallet"
        app:drawableStartCompat="@drawable/ic_wallet" />

    <TextView
        android:id="@+id/tv_support"
        style="@style/ProfileOptionItem"
        android:text="@string/support_feedback"
        app:drawableStartCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/tv_faqs"
        style="@style/ProfileOptionItem"
        android:text="@string/faqs"
        app:drawableStartCompat="@drawable/ic_faq" />

    <TextView
        android:id="@+id/tv_settings"
        style="@style/ProfileOptionItem"
        android:text="@string/settings"
        app:drawableStartCompat="@drawable/ic_settings_gear" />

    <TextView
        android:id="@+id/tv_report_problem"
        style="@style/ProfileOptionItem"
        android:text="@string/report_a_problem"
        app:drawableStartCompat="@drawable/ic_report_problem" />

    <TextView
        android:id="@+id/tv_logout"
        style="@style/ProfileOptionItem"
        android:text="@string/log_out"
        app:drawableStartCompat="@drawable/ic_logout" />

</LinearLayout>