<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close_button"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_view_cover"
        style="@style/ProfileOptionItem"
        android:text="@string/view_cover_photo"
        app:drawableStartCompat="@drawable/ic_view" />

    <TextView
        android:id="@+id/tv_upload_photo"
        style="@style/ProfileOptionItem"
        android:text="@string/upload_photo"
        app:drawableStartCompat="@drawable/ic_upload" />

    <TextView
        android:id="@+id/tv_reposition_cover"
        style="@style/ProfileOptionItem"
        android:text="@string/reposition_cover_photo"
        app:drawableStartCompat="@drawable/ic_reposition" />

    <TextView
        android:id="@+id/tv_remove_cover"
        style="@style/ProfileOptionItem"
        android:text="@string/remove_cover_photo"
        app:drawableStartCompat="@drawable/ic_remove" />

</LinearLayout>